// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`budget summary component data row group renders 1`] = `
<Fragment>
  <DataRow
    category="statePersonnel"
    data={Object {}}
    key="0"
    title="State Staff"
  />
  <DataRow
    category="expenses"
    data={Object {}}
    key="1"
    title="Other State Expenses"
  />
  <DataRow
    category="contractors"
    data={Object {}}
    key="2"
    title="Private Contractor"
  />
  <DataRow
    category="combined"
    data={Object {}}
    key="3"
    title="Subtotal"
  />
</Fragment>
`;

exports[`budget summary component data row renders with data 1`] = `
<tr
  className=""
>
  <th
    scope="row"
  >
    title text
  </th>
  <td
    className="budget-table--number"
  >
    <Dollars>
      2
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars>
      1
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars>
      1000
    </Dollars>
  </td>
</tr>
`;

exports[`budget summary component data row renders with no data 1`] = `
<tr
  className=""
>
  <th
    scope="row"
  >
    title text
  </th>
  <td
    className="budget-table--number"
  >
    <Dollars>
      0
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars>
      0
    </Dollars>
  </td>
  <td
    className="budget-table--number"
  >
    <Dollars>
      0
    </Dollars>
  </td>
</tr>
`;

exports[`budget summary component header row renders 1`] = `
<tr>
  <th
    id="summary-budget-fy-1-undefined"
    key="1"
  >
    FFY 1
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    State Total
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    Federal Total
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    Medicaid Total Computable
  </th>
</tr>
`;

exports[`budget summary component header row renders 2`] = `
<tr>
  <th
    id="summary-budget-fy-total-undefined"
    key="total"
  >
    Total
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    State Total
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    Federal Total
  </th>
  <th
    className="ds-u-text-align--right"
    scope="col"
  >
    Medicaid Total Computable
  </th>
</tr>
`;

exports[`budget summary component renders correctly 1`] = `
<div>
  <div>
    <h4
      aria-hidden="true"
      className="ds-h4 header-with-top-margin"
    >
      HIT Activities
    </h4>
    <table
      className="budget-table"
      data-cy="summaryBudgetHIT"
      key="1"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        1
         HIT Activities
      </caption>
      <thead>
        <HeaderRow
          activity="hit"
          yr="1"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "hit data",
            ]
          }
          year="1"
        />
      </tbody>
    </table>
    <table
      className="budget-table"
      data-cy="summaryBudgetHIT"
      key="2"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        2
         HIT Activities
      </caption>
      <thead>
        <HeaderRow
          activity="hit"
          yr="2"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "hit data",
            ]
          }
          year="2"
        />
      </tbody>
    </table>
    <table
      className="budget-table"
      data-cy="summaryBudgetHIT"
      key="total"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        total
         HIT Activities
      </caption>
      <thead>
        <HeaderRow
          activity="hit"
          yr="total"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "hit data",
            ]
          }
          year="total"
        />
      </tbody>
    </table>
  </div>
  <div>
    <h4
      aria-hidden="true"
      className="ds-h4 header-with-top-margin"
    >
      HIE Activities
    </h4>
    <table
      className="budget-table"
      data-cy="summaryBudgetHIE"
      key="1"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        1
         HIE Activities
      </caption>
      <thead>
        <HeaderRow
          activity="hie"
          yr="1"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "hie data",
            ]
          }
          year="1"
        />
      </tbody>
    </table>
    <table
      className="budget-table"
      data-cy="summaryBudgetHIE"
      key="2"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        2
         HIE Activities
      </caption>
      <thead>
        <HeaderRow
          activity="hie"
          yr="2"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "hie data",
            ]
          }
          year="2"
        />
      </tbody>
    </table>
    <table
      className="budget-table"
      data-cy="summaryBudgetHIE"
      key="total"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        total
         HIE Activities
      </caption>
      <thead>
        <HeaderRow
          activity="hie"
          yr="total"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "hie data",
            ]
          }
          year="total"
        />
      </tbody>
    </table>
  </div>
  <div>
    <h4
      aria-hidden="true"
      className="ds-h4 header-with-top-margin"
    >
      MMIS Activities
    </h4>
    <table
      className="budget-table"
      data-cy="summaryBudgetMMIS"
      key="1"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        1
         MMIS Activities
      </caption>
      <thead>
        <HeaderRow
          activity="mmis"
          yr="1"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "mmis data",
            ]
          }
          year="1"
        />
      </tbody>
    </table>
    <table
      className="budget-table"
      data-cy="summaryBudgetMMIS"
      key="2"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        2
         MMIS Activities
      </caption>
      <thead>
        <HeaderRow
          activity="mmis"
          yr="2"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "mmis data",
            ]
          }
          year="2"
        />
      </tbody>
    </table>
    <table
      className="budget-table"
      data-cy="summaryBudgetMMIS"
      key="total"
    >
      <caption
        className="ds-u-visibility--screen-reader"
      >
        FFY 
        total
         MMIS Activities
      </caption>
      <thead>
        <HeaderRow
          activity="mmis"
          yr="total"
        />
      </thead>
      <tbody>
        <DataRowGroup
          data={Object {}}
          entries={
            Array [
              "mmis data",
            ]
          }
          year="total"
        />
      </tbody>
    </table>
  </div>
  <table
    className="budget-table"
    data-cy="summaryBudgetTotals"
  >
    <caption
      className="ds-h4"
    >
      Activities Totals
    </caption>
    <thead>
      <tr>
        <td
          className="th"
          id="summary-budget-null1"
        />
        <th
          className="ds-u-text-align--right"
          scope="col"
        >
          State Total
        </th>
        <th
          className="ds-u-text-align--right"
          scope="col"
        >
          Federal Total
        </th>
        <th
          className="ds-u-text-align--right"
          scope="col"
        >
          Medicaid Total Computable
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        key="1"
      >
        <th
          scope="row"
        >
          FFY 1
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars>
            2
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars>
            1
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars>
            1000
          </Dollars>
        </td>
      </tr>
      <tr
        className=""
        key="2"
      >
        <th
          scope="row"
        >
          FFY 2
        </th>
        <td
          className="budget-table--number"
        >
          <Dollars>
            20
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars>
            10
          </Dollars>
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars>
            2000
          </Dollars>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
